static/css/style.css
/**
 * Design tokens
 **/
:root {
  /* Color palette */
  --white: #fafafa;
  --black: #0a0a0a;
  --gray: #474747;
  --blue: #1481ba; /* Dark variant: #3CBBB1 */
  --background: var(--white);
  --foreground: var(--black);

  /* Font size */
  --text-xs: 0.75rem;
  --text-sm: 0.875rem;
  --text-base: 100%;
  --text-lg: 1.125rem;
  --text-xl: 1.25rem;
  --text-2xl: 1.5rem;
  --text-3xl: 1.875rem;
  --text-4xl: 2.25rem;
  --text-5xl: 3rem;
  --text-6xl: 3.75rem;
  --text-7xl: 4.5rem;
  --text-8xl: 6rem;
  --text-9xl: 8rem;

  /* Font weight */
  --font-thin: 100;
  --font-ultralight: 200;
  --font-light: 300;
  --font-normal: 400;
  --font-medium: 500;
  --font-semibold: 600;
  --font-bold: 700;
  --font-black: 900;

  /* Line height */
  --leading-none: 1;
  --leading-tight: 1.25;
  --leading-snug: 1.375;
  --leading-normal: 1.5;
  --leading-relaxed: 1.625;
  --leading-loose: 2;

  /* Border size */
  --border: 1px;
  --border-2: 2px;

  /* Break points */
  --screen-sm: 640px;
  --screen-md: 768px;
  --screen-lg: 1024px;
  --screen-xl: 1280px;
  --screen-2xl: 1536px;

  /* Gap, margin, padding, ... */
  --space-base: 0.125rem;
  --space-xs: calc(var(--space-base) * 2);
  --space-sm: calc(var(--space-base) * 4);
  --space-md: calc(var(--space-base) * 8);
  --space-lg: calc(var(--space-base) * 16);
  --space-xl: calc(var(--space-base) * 32);
  --space-2xl: calc(var(--space-base) * 64);
  --space-3xl: calc(var(--space-base) * 72);

  /* Width, height */
  --w-25: 25%;
  --w-33: 33%;
  --w-50: 50%;
  --w-66: 66%;
  --w-75: 75%;
  --w-100: 100%;
  --w-full: 100vw;

  --h-25: 25%;
  --h-33: 33%;
  --h-50: 50%;
  --h-66: 66%;
  --h-75: 75%;
  --h-100: 100%;
  --h-full: 100vh;

  --prose-xs: 45ch;
  --prose-sm: 55ch;
  --prose-md: 65ch;
  --prose-lg: 75ch;

  /* Transitions */
  --transition-timing: cubic-bezier(0.4, 0, 0.2, 1);
  --transition-duration: 150ms;

  /* Fallback fonts */
  --fallback-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --fallback-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
    "Liberation Mono", "Courier New", monospace;
}

/**
 * Fonts
 **/
@font-face {
  font-family: "Geist";
  src: url("/static/fonts/Geist/GeistVF.ttf") format("truetype");
  font-weight: 100 900;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Geist Mono";
  src: url("/static/fonts/GeistMono/GeistMonoVF.ttf") format("truetype");
  font-weight: 100 900;
  font-style: monospace;
  font-display: swap;
}

/**
* CSS Reset
**/
*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

html {
  background: var(--background);
  font-family: "Geist", var(--fallback-sans);
  font-size: var(--text-base);
  line-height: var(--leading-normal);
  scroll-behavior: smooth;
  transition:
    background var(--transition-duration) var(--transition-timing),
    color var(--transition-duration) var(--transition-timing);
  -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: var(--w-100);
  width: var(--w-100);
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4 {
  color: var(--foreground);
  overflow-wrap: break-word;
}

h1,
h2,
h3,
h4 {
  line-height: var(--leading-tight);
}

pre,
code {
  font-family: "Geist Mono", var(--fallback-mono);
}

pre:has(> code) {
  margin-bottom: var(--space-md);
  padding: var(--space-md);
}

/**
 * Styles
 **/

/* Header */
.main,
.header {
  margin: 0 auto;
  max-width: var(--w-75);
}

.nav {
  font-size: var(--text-xl);
  display: grid;
  grid-template-columns: auto 1fr auto;
  padding: var(--space-lg);
}

.nav__controls {
  display: flex;
  margin-left: var(--space-md);
  align-items: center;
  justify-content: flex-start;
}

.nav__list {
  display: flex;
  gap: var(--space-lg);
}

.hero {
  padding: var(--space-2xl) var(--space-lg);
}

.hero--blog,
.hero--projects {
  padding: var(--space-xl) var(--space-lg);
}

.hero__overtitle {
  font-size: var(--text-2xl);
  padding-bottom: var(--space-md);
}

.hero__title {
  font-weight: var(--font-light);
  font-size: var(--text-7xl);
}

.hero--post {
  padding: var(--space-xl);
}

.hero__date {
  text-align: center;
}

.hero--post .hero__title {
  font-size: var(--text-4xl);
  margin: 0 auto;
  margin-bottom: var(--space-xs);
  max-width: var(--w-66);
  text-align: center;
}

.hero--project .hero__title {
  font-size: var(--text-6xl);
  margin: 0 auto;
  margin-bottom: var(--space-xs);
  max-width: var(--w-75);
  text-align: center;
}

.hero__links {
  display: flex;
  font-size: var(--text-xl);
  gap: var(--space-lg);
  justify-content: center;
  margin: 0 auto;
  max-width: var(--w-50);
}

.hero__tldr,
.hero__description {
  font-size: var(--text-xl);
  margin: 0 auto;
  margin-bottom: var(--space-sm);
  max-width: var(--prose-md);
  text-align: center;
}

.hero__tags {
  font-size: var(--text-lg);
  display: flex;
  flex-wrap: wrap;
  gap: var(--space-sm);
  justify-content: center;
}

/* Main */
.main--error {
  display: grid;
  grid-auto-flow: row;
  height: 100vh;
  place-content: center;

  h1,
  h2 {
    text-align: center;
  }

  h1 {
    font-size: var(--text-9xl);
    font-weight: var(--font-ultralight);
  }

  h2 {
    font-size: var(--text-3xl);
    font-weight: var(--font-medium);
  }
}

/* Home page sections*/
.section {
  padding: var(--space-xl) var(--space-lg);
}

.article:last-of-type,
.section:last-of-type {
  padding-bottom: var(--space-3xl);
}

.section--contact {
  align-items: center;
  display: flex;
  flex-direction: column;
  text-align: center;
}

.section__title {
  font-size: var(--text-3xl);
  font-weight: var(--font-normal);
  padding-bottom: var(--space-xs);
}

.section__content,
.section__content > * {
  color: var(--gray);
  font-size: var(--text-xl);
  max-width: var(--prose-xs);
  padding-bottom: var(--space-md);
}

.section__list {
  display: grid;
  grid-auto-flow: row;
  row-gap: var(--space-lg);
}

.item__title {
  font-size: var(--text-xl);
  font-weight: var(--font-medium);
  padding-bottom: var(--space-xs);
}

.item__date {
  color: var(--gray);
  font-size: var(--text-xs);
  font-weight: var(--font-bold);
}

.item__content,
.item__content > * {
  color: var(--gray);
  font-size: var(--text-lg);
  max-width: var(--prose-sm);
  padding-bottom: var(--space-base);
}

.item__tags {
  color: var(--gray);
  display: flex;
  flex-wrap: wrap;
  gap: var(--space-sm);
}

.item__tags__tag {
  font-size: var(--text-base);
  font-weight: var(--font-medium);
}

/* Blog and projects list pages */
.article {
  padding: var(--space-md) var(--space-lg);
}

.hero__date,
.article__header__date {
  color: var(--gray);
  font-size: var(--text-md);
  font-weight: var(--font-medium);
  margin-bottom: var(--space-xs);
}

.article__header__title {
  font-size: var(--text-2xl);
  font-weight: var(--font-medium);
  margin-bottom: var(--space-xs);
  max-width: var(--prose-sm);
}

.article__content {
  font-size: var(--text-xl);
  margin-bottom: var(--space-sm);
  max-width: var(--prose-md);
}

.article__footer {
  display: flex;
  flex-wrap: wrap;
  font-size: var(--text-lg);
  gap: var(--space-sm);
  max-width: var(--prose-md);
}

/* Posts and projects */
.project,
.post {
  color: var(--foreground);
  font-size: var(--text-lg);
  max-width: var(--prose-lg);
  padding: var(--space-md) var(--space-lg);
  padding-bottom: var(--space-3xl);

  h2,
  h3,
  h4 {
    font-weight: var(--font-medium);
    padding-bottom: var(--space-sm);
    padding-top: var(--space-md);
  }

  p {
    padding-bottom: var(--space-md);
  }

  li {
    padding-bottom: var(--space-base);
  }

  ul,
  ol {
    padding-bottom: var(--space-md);
  }

  a {
    color: var(--blue);
  }

  img {
    height: auto;
    width: var(--w-100);
  }

  iframe {
    aspect-ratio: 3 / 2;
    height: auto;
    width: var(--w-100);
  }
}

/* Footer */
.footer {
  background: var(--black);
  color: var(--white);
  display: grid;
  font-size: var(--text-lg);
  grid-template-columns: repeat(2, 1fr);
  padding: var(--space-lg) var(--space-xl);
}

.footer--dark {
  border-top: var(--border) solid var(--foreground);
}

.footer__copy {
  color: var(--white);
  max-width: var(--prose-lg);
}

.footer__links {
  display: flex;
  flex-direction: column;
  flex-grow: 0;
  gap: var(--space-md);
  margin-left: auto;
}

/* Links */
.link {
  align-items: center;
  color: var(--foreground);
  display: inline-flex;
  position: relative;
  text-decoration: none;
}

.link::before {
  background-color: var(--foreground);
  bottom: 0;
  content: "";
  height: var(--space-base);
  left: 0;
  position: absolute;
  transform-origin: right;
  transform: scaleX(0);
  transition: transform var(--transition-duration) var(--transition-timing);
  width: var(--w-100);
}

.link:hover::before {
  transform-origin: left;
  transform: scaleX(1);
}

.link--social {
  color: var(--white);
}

.link--tag {
  color: var(--gray);
}

.link--tag::before {
  background-color: var(--gray);
}

.link--social::before {
  background-color: var(--white);
}

.link--email {
  font-size: var(--text-xl);
  gap: var(--space-xs);
}

.link--email,
.link--repository,
.link--website {
  white-space: nowrap;
}

/* Dark mode toggle */
.toggle {
  opacity: 0;
  position: absolute;
}

.toggle__label {
  align-items: center;
  background-color: var(--foreground);
  border-radius: 50px;
  color: var(--background);
  cursor: pointer;
  display: flex;
  font-style: normal;
  height: 26px;
  justify-content: space-between;
  padding: 5px;
  position: relative;
  width: 50px;
}

.toggle__indicator {
  background-color: var(--background);
  border-radius: 50%;
  height: 22px;
  left: 2px;
  position: absolute;
  top: 2px;
  transition: transform var(--transition-duration) var(--transition-timing);
  width: 22px;
}

.toggle:checked + .toggle__label .toggle__indicator {
  transform: translateX(24px);
}

/* Utils */
.divider {
  border-top: var(--border-2) solid var(--gray);
  margin: 0 auto;
  max-width: var(--w-33);
}

.list {
  list-style: none;
  padding: 0;
}

.icon {
  height: var(--font-xl);
  width: var(--font-xl);
}

/**
 * Media queries
 **/
@media screen and (max-width: 1024px) {
  .header,
  .hero,
  .main {
    max-width: var(--w-100);
  }

  .hero--post .hero__title,
  .hero--project .hero__title {
    max-width: var(--w-100);
  }

  .hero__title {
    font-size: var(--text-6xl);
  }
}

@media screen and (max-width: 768px) {
  .hero__title {
    font-size: var(--text-5xl);
  }
}

@media screen and (max-width: 640px) {
  .hero,
  .section {
    padding: var(--space-xl) var(--space-md);
  }

  .article,
  .project,
  .post {
    padding: var(--space-md) var(--space-md);
  }

  .nav__list,
  .hero__links {
    gap: var(--space-md);
  }

  .hero--project .hero__title,
  .hero__title {
    font-size: var(--text-4xl);
  }

  .hero--post .hero__title {
    font-size: var(--text-3xl);
  }

  .nav {
    padding: var(--space-md);
  }

  .footer {
    align-content: center;
    display: flex;
    flex-direction: column;
  }

  .footer__copy {
    text-align: center;
  }

  .footer__links {
    margin: var(--space-lg) auto;
    text-align: center;
  }
}

